integration_tests/src/snapshots/integration_tests__mpl_core_tests__mpl_core_get_asset.snap
---
source: integration_tests/src/mpl_core_tests.rs
assertion_line: 47
expression: response
snapshot_kind: text
---
{
  "interface": "MplCoreAsset",
  "id": "x3hJtpU4AUsGejNvxzX9TKjcyNB1eYtDdDPWdeF6opr",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://example.com/asset",
    "files": [],
    "metadata": {
      "name": "Test Asset",
      "symbol": ""
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": false,
    "data_hash": "",
    "creator_hash": "",
    "asset_hash": "",
    "tree": "",
    "seq": 0,
    "leaf_id": 0
  },
  "grouping": [
    {
      "group_key": "collection",
      "group_value": "DHciVfQxHHM7t2asQJRjjkKbjvZ4PuG3Y3uiULMQUjJQ",
      "verified": true
    }
  ],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.0005,
    "basis_points": 5,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [
    {
      "address": "APrZTeVysBJqAznfLXS71NAzjr2fCVTSF1A66MeErzM7",
      "share": 100,
      "verified": true
    }
  ],
  "ownership": {
    "frozen": false,
    "delegated": true,
    "delegate": "APrZTeVysBJqAznfLXS71NAzjr2fCVTSF1A66MeErzM7",
    "ownership_model": "single",
    "owner": "APrZTeVysBJqAznfLXS71NAzjr2fCVTSF1A66MeErzM7"
  },
  "supply": null,
  "mutable": true,
  "burnt": false,
  "lamports": 4019520,
  "executable": false,
  "rent_epoch": 18446744073709551615,
  "plugins": {
    "royalties": {
      "authority": {
        "type": "UpdateAuthority",
        "address": null
      },
      "index": 0,
      "offset": 119,
      "data": {
        "creators": [
          {
            "address": "APrZTeVysBJqAznfLXS71NAzjr2fCVTSF1A66MeErzM7",
            "percentage": 100
          }
        ],
        "basis_points": 5,
        "rule_set": "None"
      }
    },
    "freeze_delegate": {
      "authority": {
        "type": "Address",
        "address": "APrZTeVysBJqAznfLXS71NAzjr2fCVTSF1A66MeErzM7"
      },
      "index": 1,
      "offset": 160,
      "data": {
        "frozen": false
      }
    },
    "transfer_delegate": {
      "authority": {
        "type": "Owner",
        "address": null
      },
      "index": 2,
      "offset": 162,
      "data": {}
    }
  },
  "mpl_core_info": {
    "plugins_json_version": 1
  },
  "external_plugins": []
}
