integration_tests/src/snapshots/integration_tests__mpl_core_tests__mpl_core_get_asset_with_app_data_with_msg_pack_data_and_address_is_data_authority.snap
---
source: integration_tests/src/mpl_core_tests.rs
assertion_line: 714
expression: response
snapshot_kind: text
---
{
  "interface": "MplCoreAsset",
  "id": "2pY3t29uxpBotbmKbCsQNjYfML5DBoBshDgB7hpHu3XA",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://example.com/asset",
    "files": [],
    "metadata": {
      "name": "Test Asset",
      "symbol": ""
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "APrZTeVysBJqAznfLXS71NAzjr2fCVTSF1A66MeErzM7",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": false,
    "data_hash": "",
    "creator_hash": "",
    "asset_hash": "",
    "tree": "",
    "seq": 0,
    "leaf_id": 0
  },
  "grouping": [],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.0,
    "basis_points": 0,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [],
  "ownership": {
    "frozen": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "single",
    "owner": "HKwwF4sPVYFPgqEgxth4GZRZjJ9o4E3wA8eu2QM5Vt3H"
  },
  "supply": null,
  "mutable": true,
  "burnt": false,
  "lamports": 3936000,
  "executable": false,
  "rent_epoch": 18446744073709551615,
  "plugins": {},
  "mpl_core_info": {
    "plugins_json_version": 1
  },
  "external_plugins": [
    {
      "data_len": 30,
      "index": 0,
      "offset": 119,
      "authority": {
        "type": "UpdateAuthority",
        "address": null
      },
      "type": "AppData",
      "adapter_config": {
        "data_authority": {
          "type": "Address",
          "address": "CYHj4vYrPnuQ1pyqrjeRBJJ4QA4LfyoFaaRgSow16Ziw"
        },
        "schema": "MsgPack"
      },
      "data_offset": 154,
      "data": {
        "message": "Hello",
        "target": "msgpack"
      }
    }
  ]
}
