integration_tests/src/snapshots/integration_tests__mpl_core_tests__mpl_core_get_asset_with_data_section_with_msg_pack_data.snap
---
source: integration_tests/src/mpl_core_tests.rs
assertion_line: 903
expression: response
snapshot_kind: text
---
{
  "interface": "MplCoreAsset",
  "id": "EuXEcqHhF9jPxV9CKB5hjHC2TRo3xprdgk5vJTc9qRaY",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://example.com/asset",
    "files": [],
    "metadata": {
      "name": "Test Asset",
      "symbol": ""
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": false,
    "data_hash": "",
    "creator_hash": "",
    "asset_hash": "",
    "tree": "",
    "seq": 0,
    "leaf_id": 0
  },
  "grouping": [
    {
      "group_key": "collection",
      "group_value": "53q1PCBy5KgzZfoHu6bnLWQFVmJtKyceP8DqNMhXWUaA",
      "verified": true
    }
  ],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.0,
    "basis_points": 0,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [],
  "ownership": {
    "frozen": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "single",
    "owner": "HKwwF4sPVYFPgqEgxth4GZRZjJ9o4E3wA8eu2QM5Vt3H"
  },
  "supply": null,
  "mutable": true,
  "burnt": false,
  "lamports": 3720240,
  "executable": false,
  "rent_epoch": 18446744073709551615,
  "plugins": {},
  "mpl_core_info": {
    "plugins_json_version": 1
  },
  "external_plugins": [
    {
      "data_len": 30,
      "index": 0,
      "offset": 119,
      "authority": {
        "type": "None",
        "address": null
      },
      "type": "DataSection",
      "adapter_config": {
        "parent_key": {
          "linked_app_data": {
            "type": "UpdateAuthority",
            "address": null
          }
        },
        "schema": "MsgPack"
      },
      "data_offset": 123,
      "data": {
        "message": "Hello",
        "target": "msgpack"
      }
    }
  ]
}
